test/files/neg/t5318c.check
t5318c.scala:13: error: diverging implicit expansion for type CompilerHang.this.TC[x]
starting with method tc in class CompilerHang
  breakage(tc) // type checker doesn't terminate, should report inference failure
           ^
one error found
